# simply-colored

./: CHANGELOG.md  Cargo.toml  README.md  typos.toml
.cargo/: config.toml
script/: Cargo.toml  README.md
script/src/: main.rs
src/: lib.rs  main.rs
tests/: output.rs
